--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ attrs==23.1.0
 blinker==1.6.3
 click==8.1.7
 colorama==0.4.6
-flask==3.0.0
+Flask==2.0.1
+
 Flask-RESTful==0.3.10
 flask-restplus==0.13.0
 flask-sqlalchemy==3.1.1
