--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ Flask==2.0.1
 
 Flask-RESTful==0.3.10
 flask-restplus==0.13.0
-flask-sqlalchemy==3.1.1
+Flask-SQLAlchemy==2.5.0
 greenlet==3.0.0
 importlib-metadata==6.8.0
 importlib-resources==6.1.0
