--- a/requirements.txt
+++ b/requirements.txt
@@ -2,29 +2,130 @@ aniso8601==9.0.1
 attrs==23.1.0
 blinker==1.6.3
 click==8.1.7
-colorama==0.4.6
-Flask==2.0.1
+alembic                1.12.0
+aniso8601              9.0.1
+argon2-cffi            21.3.0
+argon2-cffi-bindings   21.2.0
+asttokens              2.0.5
+attrs                  22.1.0
+backcall               0.2.0
+beautifulsoup4         4.11.1
+bleach                 5.0.1
+blinker                1.6.3
+cachelib               0.6.0
+certifi                2023.7.22
+cffi                   1.15.1
+charset-normalizer     3.3.1
+click                  8.1.7
+colorama               0.4.6
+cs50                   9.0.0
+cycler                 0.11.0
+debugpy                1.6.0
+decorator              5.1.1
+defusedxml             0.7.1
+distlib                0.3.4
+entrypoints            0.4
+executing              0.8.3
+fastjsonschema         2.16.1
+filelock               3.6.0
+Flask                  2.3.2
+Flask-Cors             3.0.9
+Flask-Migrate          4.0.5
+Flask-MySQLdb          1.0.1
+flask-restplus         0.13.0
+Flask-Session          0.4.0
+flask-sqlalchemy       3.1.1
+flask-swagger-ui       3.20.9
+Flask-WTF              1.0.1
+fonttools              4.33.3
+greenlet               3.0.0
+gunicorn               19.9.0
+idna                   3.4
+importlib-metadata     4.12.0
+importlib-resources    5.9.0
+ipykernel              6.13.0
+ipython                8.3.0
+ipython-genutils       0.2.0
+ipywidgets             8.0.2
+itsdangerous           2.1.2
+jedi                   0.18.1
+Jinja2                 3.1.2
+joblib                 1.1.0
+jsonschema             4.16.0
+jupyter-client         7.3.0
+jupyter-core           4.10.0
+jupyterlab-pygments    0.2.2
+jupyterlab-widgets     3.0.3
+kiwisolver             1.4.2
+lxml                   4.9.1
+Mako                   1.2.4
+MarkupSafe             2.1.3
+matplotlib             3.5.2
+matplotlib-inline      0.1.3
+mistune                2.0.4
+mysql-connector-python 8.0.28
+mysqlclient            2.1.0
+nbclient               0.6.8
+nbconvert              7.0.0
+nbformat               5.4.0
+nest-asyncio           1.5.5
+nose                   1.3.7
+notebook               6.4.12
+numpy                  1.22.3
+packaging              21.3
+pandas                 1.4.2
+pandocfilters          1.5.0
+parso                  0.8.3
+pickleshare            0.7.5
+Pillow                 9.1.0
+pip                    21.1.1
+pkgutil-resolve-name   1.3.10
+platformdirs           2.5.2
+prometheus-client      0.14.1
+prompt-toolkit         3.0.29
+protobuf               3.19.4
+psutil                 5.9.0
+psycopg2               2.9.9
+pure-eval              0.2.2
+pycparser              2.21
+pygame                 2.1.2
+Pygments               2.12.0
+pyparsing              3.0.8
+pyrsistent             0.18.1
+python-dateutil        2.8.2
+python-dotenv          0.21.0
+pytz                   2022.1
+pywin32                304
+pywinpty               2.0.7
+pyzmq                  22.3.0
+qgrid                  1.3.1
+requests               2.31.0
+scikit-learn           1.0.2
+scipy                  1.8.0
+seaborn                0.11.2
+Send2Trash             1.8.0
+setuptools             56.0.0
+six                    1.16.0
+soupsieve              2.3.2.post1
+SQLAlchemy             2.0.22
+sqlparse               0.4.2
+stack-data             0.2.0
+termcolor              1.1.0
+terminado              0.15.0
+threadpoolctl          3.1.0
+tinycss2               1.1.1
+tornado                6.1
+traitlets              5.3.0
+typing-extensions      4.8.0
+urllib3                2.0.7
+uuid                   1.30
+validate-email         1.3
+virtualenv             20.14.1
+wcwidth                0.2.5
+webencodings           0.5.1
+werkzeug               3.0.1
+wheel                  0.37.1
+widgetsnbextension     4.0.3
+WTForms                3.0.1
+zipp                   3.8.1
 
-Flask-RESTful==0.3.10
-flask-restplus==0.13.0
-Flask-SQLAlchemy==2.5.0
-greenlet==3.0.0
-importlib-metadata==4.8.1
-importlib-resources==5.2.2
-
-itsdangerous==2.1.2
-Jinja2==3.1.2
-jsonschema==4.17.3
-
-jsonschema-specifications==0.1.0
-MarkupSafe==2.1.3
-pkgutil-resolve-name==1.3.10
-psycopg2==2.9.9
-pytz==2023.3.post1
-referencing==0.8.0
-six==1.16.0
-SQLAlchemy==2.0.22
-typing-extensions
-werkzeug
-flask-swagger-ui
-gunicorn
