--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ entrypoints      ==      0.4
 executing        ==      0.8.3
 fastjsonschema  ==       2.16.1
 filelock        ==       3.6.0
-Flask           ==       2.3.2
+Flask          
 Flask-Cors      ==       3.0.9
 Flask-Migrate   ==       4.0.5
 Flask-MySQLdb   ==       1.0.1
