--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ Flask-Migrate   ==       4.0.5
 Flask-MySQLdb   ==       1.0.1
 flask-restplus  ==       0.13.0
 Flask-Session   ==       0.4.0
-flask-sqlalchemy  ==     3.1.1
+flask-sqlalchemy 
 flask-swagger-ui  ==     3.20.9
 Flask-WTF        ==      1.0.1
 fonttools         ==     4.33.3
